service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: networking-project
  labels:
    app: nginx-ingress
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080  # Port for HTTP access from outside the cluster
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443  # Port for HTTPS access from outside the cluster
  selector:
    app: nginx-ingress

---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: networking-project
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: default-http-backend
